UI/UX Masonry alignment tweak #118 Fixed - set width for different screen sizes and aligned center

--- a/src/assets/styles/flashflex/components/_card.scss
+++ b/src/assets/styles/flashflex/components/_card.scss
@@ -4,7 +4,11 @@
 
 .card {
 	width: 150px;
-	margin-right: 1rem;
+	
+	&:not(.masonry) {
+		margin-right: 1rem;
+	}
+
 	// &:not(:last-of-type) {
 	// 	margin-right: 1rem;
 	// }
@@ -329,7 +333,7 @@
 
 	@include for-phone-only {
 		margin-right: 0;
-		&:nth-child(odd) {
+		&:not(.masonry):nth-child(odd) {
 			margin-right: 1rem;
 		}
 	}
